data/derived/sp14/progs/unify/prog4302.ml.out
Characters 32-58:
  let rec fixpoint (f,b) = wwhile((fixpoint(f, f b),f b = b), b);;
                                  ^^^^^^^^^^^^^^^^^^^^^^^^^^
Error: This expression has type 'a * 'b
       but an expression was expected of type 'c -> 'c * bool
